# DarkHorse

./: .gitattributes  .gitignore  .swp  1  1q  2q  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  Dark.vcxproj  Dark.vcxproj.filters  Dockerfile  LICENSE  MainEngine  MainEngine.vcxproj  MainEngine.vcxproj.filters  Simd  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  base.txt  bigagain9.quant  cpp.gitignore  eval.txt  file  generator.vcxproj  int8.quant  int8test.quant  package-lock.json  package.json  reading.sln  rescored.quant  test.txt  test2.txt  testing  °
Checkers/CheckerEngineX/: .MovePicker.cpp.swp  .main.cpp.swp  Bits.cpp  Bits.h  Board.cpp  Board.h  BoardFactory.cpp  BoardFactory.h  CBInterface.cpp  CBInterface.h  CMakeCache.txt  CMakeLists.txt  CheckerBoard.cpp  CheckerBoard.h  CheckerEngineX  CheckerEngineX.cbp  CmdParser.cpp  CmdParser.h  Endgame.cpp  Endgame.h  FixPoint.h  GameEvaluation.cpp  GameEvaluation.h  GameLogic.cpp  GameLogic.h  Index.cpp  Index.h  Layer.h  Line.cpp  Line.h  LinearSparse.h  MGenerator.cpp  MGenerator.h  Makefile  Move.cpp  Move.h  MoveListe.cpp  MoveListe.h  MovePicker.cpp  MovePicker.h  (+30 more)
Checkers/CheckerEngineX/Checks/: perft_check.cpp  tb_rescorer.cpp
Training/: 1  BatchProvider.cpp  BatchProvider.h  BloomFilter.h  CMakeLists.txt  Cache.h  Engine.cpp  Engine.h  Enignes  Experimental.py  Generator.cpp  Generator.h  GeneratorZ.cpp  GeneratorZ.h  HyperLog.h  Lamb.py  LitMLP.py  Match.cpp  Match.h  PolicyNet.py  PosStreamer.cpp  PosStreamer.h  PyBoardTest.py  PyHelper.cpp  PyHelper.h  ReadMe.md  Sample.cpp  Sample.h  SampleFilter.cpp  SampleFilter.h  SampleFilter2.cpp  SampleFilter2.h  SimplePool.cpp  SimplePool.h  Trainer.cpp  Trainer.h  Training.cpp  Training.h  Utilities.cpp  Utilities.h  (+74 more)
Training/Engines/: .gitkeep  Dummy  Generator  asp1  asp2  balance  base  base2  basic_engine  bla  blaaaa  blobby  boring  check  check8  debug  default  dev_engine  dev_engine2  dev_engine_old  dumbmaybe  dummy  fix  generator  generator2  hardsin  it  jumpjump  mobbalan  mobility  narrowasp  new_light  new_light2  new_light3  new_light4  newage  newage2  newage3  newage4  newage5  (+76 more)
Training/Networks/: bucketbase.quant  bucketcrazy.quant  client.quant  nonwdl.quant  nonwdlnext.quant  nonwdltest2.quant  square5.quant  test0.quant  test1.quant  test2.quant  test3.quant  test4.quant  test5.quant  test6.quant  test7.quant  testing2.quant  testing3.quant  testing4.quant  testing5.quant  testing6.quant  wdlnext.quant
Training/Positions/: 11manballots.pos  3move.book  3move.pos  balanced.pos  depth0-testing.pos  drawbook.book  genBook1.book  genBook2.book  genBook6.pos  new.book  test.txt  train.pos  train12.book  train2.pos  train3.pos  train4.pos  train8.pos  unbalanced.pos
Training/PyTrainer/: .gitkeep  Helper.py  LitMLP.py  PolicyNet.py  TrainData.py  basemodel  basemodel - Kopie.quant  basemodel.quant  basemodelint8.quant  bigagain.quant  bigagain10.quant  bigagain11.quant  bigagain12.quant  bigagain2.quant  bigagain2end.quant  bigagain2open.quant  bigagain5.quant  bigagain7.quant  bigagain8.quant  bigagain9.quant  bignet.quant  epoch=0-v1.ckpt  epoch=0.ckpt  epoch=100.ckpt  epoch=11.ckpt  epoch=13.ckpt  epoch=14.ckpt  epoch=17.ckpt  epoch=18.ckpt  epoch=19-v1.ckpt  epoch=19-v2.ckpt  epoch=19-v3.ckpt  epoch=19.ckpt  epoch=2-v1.ckpt  epoch=2-v2.ckpt  epoch=2.ckpt  epoch=22.ckpt  epoch=3.ckpt  epoch=30.ckpt  epoch=39.ckpt  (+31 more)
Training/PyTrainer/PyTrainer/: LitMLP.py  TrainData2.py  basemodel - Kopie.quant  basemodel.quant  bigagain7.quant  bigagain9.quant  bigger.quant  bigger2.quant  main.py  modelbig.quant  policy.quant  small2.quant  smalltest.quant  test.quant  test8.quant  testsmall.quant
Training/PyTrainer/lightning_logs/version_0/: events.out.tfevents.1638734495.instance-2.9792.0  events.out.tfevents.1639080782.instance-2.3570.0  events.out.tfevents.1639526976.robin-PC.305552.0  events.out.tfevents.1640004574.instance-2.8764.0  events.out.tfevents.1640463507.robin-PC.367674.0  events.out.tfevents.1643312553.robin-PC.18557.0  events.out.tfevents.1647791330.robin-PC.25578.0  events.out.tfevents.1649115758.robin-PC.7137.0  events.out.tfevents.1649811745.robin-PC.3564950.0  events.out.tfevents.1650475969.robin-PC.455263.0  events.out.tfevents.1651258677.DESKTOP-7H1ATPM.15384.0
Training/PyTrainer/lightning_logs/version_1/: events.out.tfevents.1638734566.instance-2.10514.0  events.out.tfevents.1639081282.instance-2.3985.0  events.out.tfevents.1639538151.robin-PC.652795.0  events.out.tfevents.1640004610.instance-2.8799.0  events.out.tfevents.1641057260.robin-PC.15759.0  events.out.tfevents.1643317506.robin-PC.114913.0  events.out.tfevents.1648329744.robin-PC.15547.0  events.out.tfevents.1648946387.robin-PC.86161.0  events.out.tfevents.1649115881.robin-PC.7232.0  events.out.tfevents.1650481758.robin-PC.3214186.0  events.out.tfevents.1651287770.DESKTOP-7H1ATPM.7236.0
Training/PyTrainer/lightning_logs/version_10/: events.out.tfevents.1639435259.robin-PC.37407.0
Training/PyTrainer/lightning_logs/version_11/: events.out.tfevents.1639435533.robin-PC.38224.0  events.out.tfevents.1650627554.robin-PC.9433.0
Training/PyTrainer/lightning_logs/version_12/: events.out.tfevents.1639435572.robin-PC.38312.0
Training/PyTrainer/lightning_logs/version_13/: events.out.tfevents.1639435604.robin-PC.38409.0
Training/PyTrainer/lightning_logs/version_14/: events.out.tfevents.1639435623.robin-PC.38463.0
Training/PyTrainer/lightning_logs/version_15/: events.out.tfevents.1639435712.robin-PC.38774.0
Training/PyTrainer/lightning_logs/version_2/: events.out.tfevents.1639608884.robin-PC.6300.0  (+7 more)
Training/Rust/: .gitattributes  1  Cargo.toml  check.txt  generator2  pos.txt  pos2.txt  relu.quant  unique.pos  wincheck.txt
Training/Rust/src/: Data.rs  Pos.rs  Sample.rs  TableBase.rs  dataloader.rs  lib.rs  main.rs
Training/TrainData/: temp
Training/Util/: Book.cpp  Book.h  Compress.cpp  Compress.h  File.cpp  File.h  LRUCache.h  Rescorer.cpp  SampleUtil.cpp  SampleUtil.h
Training/proto/: Training.pb.cc  Training.pb.h  Training.proto
(+167 files in other folders)
